# fw-pipeline-io

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
fw_gear_skeleton/: __init__.py  parser.py
fw_pipeline_io/data_tools/: file_downloader.py  search.py
fw_pipeline_io/fw_cli/: commands.py
fw_pipeline_io/fw_data_tools/: file_downloader.py  search.py
fw_pipeline_io/fwcli/: commands.py
fw_pipeline_io/fwdatatools/: file_downloader.py  search.py
fw_pipeline_io/interface/: gearinterface.py
fw_pipeline_io/iohandling/: parsing.py  tagsfile.py  yamlfiles.py
fw_pipeline_io/util/: fwfile.py
tests/data_tools/: test_file_downloader.py  test_search.py
tests/fw_cli/: test_commands.py
tests/fw_data_tools/: test_file_downloader.py  test_search.py
tests/iohandling/: test_parsing.py  test_tagsfile.py  test_yamlfiles.py
