[tool.poetry]
name = "fw-pipeline-io"
version = "0.0.0"
description = "A set of tools for Flywheel Pipelines. The current version only supports minimal tools for searching and downlaoding files with tags. "
authors = ["Flywheel <support@flywheel.io>"]
readme = "README.md"
license = "MIT"
keywords = [
    "Flywheel",
    "Pipeline",
    "Toolkit"
]
repository = "https://gitlab.com/flywheel-io/scientific-solutions/lib/fw-pipeline-io"
classifiers = [
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.9"
flywheel-gear-toolkit = "^0.6"
flywheel-sdk = "^16.8.0"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
pre-commit = "^2.9.3"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
